# clc-miner

./: .gitignore  CMakeLists.txt  README.md  clcminer64  deploy.sh
rewardsSave/: 212.coin  213.coin  222.coin  223.coin  224.coin  225.coin  226.coin  227.coin  228.coin  229.coin  230.coin  231.coin  232.coin  233.coin  234.coin  235.coin  236.coin  237.coin  238.coin  239.coin  240.coin  241.coin  242.coin
src/: colors.h  config.cpp  config.h  main.cpp
src/lib/: uint256.cpp  uint256.h
